--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -3,12 +3,17 @@
 <head>
 <meta name="description" content="pgmviz" />
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/pgmviz.css">
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/bootstrap.min.css">
+
 
 <script src="{{ STATIC_URL }}js/cytoscape-lib/jquery.js"></script>
 <meta charset=utf-8 />
 <title>Probablistic Graphical Models</title>
   <script src="{{ STATIC_URL }}js/cytoscape-lib/cytoscape.min.js"></script>
 </head>
+<button type="button" id="create-node-toggle" class="btn btn-sm btn-primary" data-toggle="collapse">
+Toggle Create Node
+</button>
 <div id="cy"></div>
 <body>
 
@@ -103,15 +108,30 @@ $('#cy').cytoscape({
 
 
 NODE_ID = 1
+
+CREATE_NODE_STATE = false
+
+$("#create-node-toggle").click(function(event){
+    console.log("hello");
+    if (CREATE_NODE_STATE == true){
+        CREATE_NODE_STATE = false
+    } else {
+        CREATE_NODE_STATE = true
+    }
+
+});
+
 $("#cy").click(function(event){
+    if (CREATE_NODE_STATE == true) {
 
-    pos = getMousePos(this,event)
-    NODE_ID += 1
-    node_id_str = NODE_ID.toString()
+        pos = getMousePos(this,event)
+        NODE_ID += 1
+        node_id_str = NODE_ID.toString()
 
-    cy.add([
-      { group: "nodes", data: { id: node_id_str }, renderedPosition: pos },
-    ]);
+        cy.add([
+          { group: "nodes", data: { id: node_id_str }, renderedPosition: pos },
+        ]);
+    }
 });
 
 
