--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -4,8 +4,8 @@
         <title>Probablistic Graphical Models</title>
         <meta name="description" content="pgmviz" />
         <meta charset=utf-8 />
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/pgmviz.css">
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/bootstrap.min.css">  
+        <link rel="stylesheet" type="text/css" href="../static/css/pgmviz.css">
+        <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">  
     </head>
     <body>
         <button type="button" id="drawMode">
