name prompt for node name

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -15,11 +15,12 @@
             Analysis Mode
         </button>
         <div id="modeButtons"></div>
-        <div id="cy" style="height: 400px; width: 1100px;"></div>
+        <div id="cy" style="height: 400px; width: 1100px;"></div> 
 <!--TODO: add style for whole doc -->
         <script src="../static/js/cytoscape-lib/jquery.js"></script>
         <script src="../static/js/cytoscape-lib/cytoscape.min.js"></script>
         <script src="../static/js/addNodes.js"></script>
         <script src="../static/js/basic.js"></script>
+	<script src="../static/js/namePrompt.js"></script>
     </body>
 </html>
