--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -5,7 +5,8 @@
         <meta name="description" content="pgmviz" />
         <meta charset=utf-8 />
         <link rel="stylesheet" type="text/css" href="../static/css/pgmviz.css">
-        <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">  
+        <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="../static/css/jquery-ui.css">		
     </head>
     <body>
         <button type="button" id="drawMode">
@@ -15,14 +16,20 @@
             Analysis Mode
         </button>
         <div id="modeButtons"></div>
-        <div id="cy" style="height: 400px; width: 1100px;"></div> 
+        <div id="cy" style="height: 400px; width: 1100px;">
+		    <div id="customDialog" title="Bhosdi Ke..">
+				Chutiye bhenchod :P
+			</div>
+		</div> 
 <!--TODO: add style for whole doc -->
         <script src="../static/js/cytoscape-lib/jquery.js"></script>
+		<script src="../static/js/cytoscape-lib/jquery-ui.js"></script>
         <script src="../static/js/cytoscape-lib/cytoscape.min.js"></script>
         
         <script src="../static/js/basic.js"></script>
         
         <script src="../static/js/addNodes.js"></script>
         <script src="../static/js/addEdges.js"></script>
+		<script src="../static/js/customAlert.js"></script>
     </body>
 </html>
