index.html modified

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -22,9 +22,9 @@
 			</div>
 		</div> 
 <!--TODO: add style for whole doc -->
-        <script src="../static/js/cytoscape-lib/jquery.js"></script>
-		<script src="../static/js/cytoscape-lib/jquery-ui.js"></script>
-        <script src="../static/js/cytoscape-lib/cytoscape.min.js"></script>
+        <script src="../static/js/lib/jquery.js"></script>
+		<script src="../static/js/lib/jquery-ui.js"></script>
+        <script src="../static/js/lib/cytoscape.min.js"></script>
         
         <script src="../static/js/basic.js"></script>
         
