library files are added.

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -17,7 +17,7 @@
         </button>
         <div id="modeButtons"></div>
         <div id="cy" style="height: 400px; width: 1100px;">
-            <div id="customDialog" title="Bhosdi Ke..">
+            <div id="customDialog" title="Alert">
             </div>
         </div> 
 <!--TODO: add style for whole doc -->
