--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -30,6 +30,6 @@
         <script src="../static/js/addNodes.js"></script>
         <script src="../static/js/addEdges.js"></script>
         <script src="../static/js/customAlert.js"></script>
-        <script src="../static/js/customAlert.js"></script>
+        <script src="../static/js/validationMethods.js"></script>
     </body>
 </html>
