--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -6,7 +6,15 @@
         <meta charset=utf-8 />
         <link rel="stylesheet" type="text/css" href="../static/css/pgmviz.css">
         <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="../static/css/jquery-ui.css">        
+        <link rel="stylesheet" type="text/css" href="../static/css/jquery-ui.css">  
+        <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>      
     </head>
     <body>
         <button type="button" id="drawMode">
