--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -14,30 +14,98 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
 
 <!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>      
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script> 
+<link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">  
+        <script type="text/javascript" src="../static/js/jquery.min.js"></script>
+    <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../static/js/scripts.js"></script>   
     </head>
     <body>
-              <button type="button" id="drawMode">
-            Draw Mode
-        </button>
-        <button type="button" id="analysisMode">
-            Analysis Mode
-        </button>
-        <div id="modeButtons"></div>
-        <div id="cy" style="height: 400px; width: 1100px;">
-            <div id="customDialog" title="Alert">
-            </div>
-        </div> 
+              
 <!--TODO: add style for whole doc -->
         <script src="../static/js/lib/jquery.js"></script>
         <script src="../static/js/lib/jquery-ui.js"></script>
         <script src="../static/js/lib/cytoscape.min.js"></script>
         
+        
+
+        <div class="container">
+    <div class="row clearfix">
+        <div class="col-md-12 column">
+            <nav class="navbar navbar-default" role="navigation">
+                <div class="navbar-header">
+                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#">pgmpy_viz</a>
+                </div>
+                
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="#">Bayesian</a>
+                        </li>
+                        <li>
+                            <a href="#">Markov</a>
+                        </li>
+                        
+                    </ul>
+                    
+                    <ul class="nav navbar-nav navbar-right">
+                        <form class="navbar-form navbar-left" role="search">
+                            <div class="form-group">
+                                <input type="text" class="form-control" />
+                            </div> <button type="submit" class="btn btn-default">Search</button>
+                        </form>
+                        
+                        <li class="dropdown">
+                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Draw<strong class="caret"></strong></a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a href="#">Node</a>
+                                </li>
+                                <li>
+                                    <a href="#">Link</a>
+                                </li>
+                                
+                                <li class="divider">
+                                </li>
+                                
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">Save</a>
+                        </li>
+                        <li>
+                            <a href="#">Analyse</a>
+                        </li>
+                    </ul>
+                </div>
+                
+            </nav>
+            <div class="jumbotron">
+            <!--<button type="button" id="drawMode">
+            Draw Mode
+        </button>
+        <button type="button" id="analysisMode">
+            Analysis Mode
+        </button>
+        <div id="modeButtons"></div>-->
+        <div id="cy" style="height: 400px; width: 1100px;">
+            <div id="customDialog" title="Alert">
+            </div>
+        </div> 
         <script src="../static/js/basic.js"></script>
         
         <script src="../static/js/addNodes.js"></script>
         <script src="../static/js/addEdges.js"></script>
         <script src="../static/js/customAlert.js"></script>
-        <script src="../static/js/validationMethods.js"></script>
+        <script src="../static/js/validationMethods.js"></script>     
+            </div>
+        </div>
+    </div>
+</div>
     </body>
 </html>
+
+
+
+
