--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -60,10 +60,10 @@
                              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Draw<strong class="caret"></strong></a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a href="#">Node</a>
+                                    <a href="#" onclick="initAddNodesMode();">Node</a>
                                 </li>
                                 <li>
-                                    <a href="#">Link</a>
+                                    <a href="#" onclick="initAddNodesMode();">Link</a>
                                 </li>
                                 
                                 
@@ -80,7 +80,7 @@
                 </div>
                 
             </nav>
-            <div class="jumbotron">
+            <div class="jumbotron" id="graphdiv">
             <!--<button type="button" id="drawMode">
             Draw Mode
         </button>
