--- a/main/static/css/pgmviz.css
+++ b/main/static/css/pgmviz.css
@@ -1,18 +1,29 @@
 body { 
-  font: 14px helvetica neue, helvetica, arial, sans-serif;
+  	font: 14px helvetica neue, helvetica, arial, sans-serif;
 }
 
 #cy {
-  height: 100%;
-  width: 100%;
+  	height: 100%;
+  	width: 100%;
 
-  z-index: -3;
+  	z-index: -3;
+  	padding-left: 0px;
+	padding-top: 0px;
+	padding-right: 0px;
+	padding-bottom: 0px;
+}
+
+#graphdiv {
+	padding-bottom: 0px;
+	padding-top: 0px;
+	padding-left: 0px;
+	padding-right: 0px;
 }
 
 #create-node-toggle {
-  z-index: -2;
+  	z-index: -2;
 }
 
 #customDialog{
-  display:none;
+  	display:none;
 }
