--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -7,88 +7,64 @@
         <link rel="stylesheet" type="text/css" href="../static/css/pgmviz.css">
         <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="../static/css/jquery-ui.css">  
-        <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script> 
-<link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">  
-        <script type="text/javascript" src="../static/js/jquery.min.js"></script>
-    <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../static/js/scripts.js"></script>   
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
+        <link href="../static/css/dashboard.css" rel="stylesheet">
+        <link href="../static/css/style.css" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script type="text/javascript" src="../static/js/lib/jquery-ui.js"></script>  
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script> 
+        <script type="text/javascript" src="../static/js/scripts.js"></script>
+        <script type="text/javascript" src="../static/js/lib/cytoscape.min.js"></script>
+        <script type="text/javascript" src="../static/js/addNodes.js"></script>
+        <script type="text/javascript" src="../static/js/addEdges.js"></script>
+        <script type="text/javascript" src="../static/js/customAlert.js"></script>
+        <script type="text/javascript" src="../static/js/validationMethods.js"></script>
+        <script type="text/javascript" src="../static/js/docs.min.js"></script>
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+        <script type="text/javascript" src="../static/js/ie10-viewport-bug-workaround.js"></script>    
     </head>
-    <body>
-              
-<!--TODO: add style for whole doc -->
-        <script src="../static/js/lib/jquery.js"></script>
-        <script src="../static/js/lib/jquery-ui.js"></script>
-        <script src="../static/js/lib/cytoscape.min.js"></script>
-        
-        
+    <body>      
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">pgmpy_viz</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="overview.html">Graph</a></li>
+            <li><a href="settings.html">Settings</a></li>
+            <li><a href="profile.html">Profile</a></li>
+            <li><a href="help.html">Help</a></li>
+          </ul>
+          <form class="navbar-form navbar-right">
+            <input type="text" class="form-control" placeholder="Search...">
+          </form>
+        </div>
+      </div>
+    </nav>
 
-        <div class="container">
-    <div class="row clearfix">
-        <div class="col-md-12 column">
-            <nav class="navbar navbar-default" role="navigation">
-                <div class="navbar-header">
-                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#">pgmpy_viz</a>
-                </div>
-                
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li>
-                            <a href="#">Bayesian</a>
-                        </li>
-                        <li>
-                            <a href="#">Markov</a>
-                        </li>
-                        
-                    </ul>
-                    
-                    <ul class="nav navbar-nav navbar-right">
-                        <form class="navbar-form navbar-left" role="search">
-                            <div class="form-group">
-                                <input type="text" class="form-control" />
-                            </div> <button type="submit" class="btn btn-default">Search</button>
-                        </form>
-                        
-                        <li class="dropdown">
-                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Draw<strong class="caret"></strong></a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="#" onclick="initAddNodesMode();">Node</a>
-                                </li>
-                                <li>
-                                    <a href="#" onclick="initAddNodesMode();">Link</a>
-                                </li>
-                                
-                                
-                                
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">Save</a>
-                        </li>
-                        <li>
-                            <a href="#">Analyse</a>
-                        </li>
-                    </ul>
-                </div>
-                
-            </nav>
-            <div class="jumbotron" id="graphdiv">
-            <!--<button type="button" id="drawMode">
-            Draw Mode
-        </button>
-        <button type="button" id="analysisMode">
-            Analysis Mode
-        </button>
-        <div id="modeButtons"></div>-->
-        <div id="cy" style="height: 400px; width: 1100px;">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-3 col-md-2 sidebar">
+          <ul class="nav nav-sidebar">
+            <li><a href="overview.html">Overview</a></li>
+            <li class="active"><a href="bayesian.html">Bayesian Graph</a></li>
+            <li><a href="markov.html">Markov Graph</a></li>
+            <li><a href="cpd.html">CPD Table</a></li>
+            <li><a href="factor.html">Factor Table</a></li>
+            <li><a href="analytics.html">Analytics</a></li>
+          </ul>
+        </div>
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+          <h1 class="page-header">Bayesian graph</h1>
+                   <div id="cy" style="height: 400px; width: 1100px;">
             <div id="customDialog" title="Alert">
             </div>
         </div> 
@@ -98,13 +74,16 @@
         <script src="../static/js/addEdges.js"></script>
         <script src="../static/js/customAlert.js"></script>
         <script src="../static/js/validationMethods.js"></script>     
-            </div>
+
+ 
+          
         </div>
+      </div>
     </div>
-</div>
-    </body>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+
+        </body>
 </html>
-
-
-
-
